fixed gap in catalog

--- a/source/sass/blocks/catalog-card.scss
+++ b/source/sass/blocks/catalog-card.scss
@@ -1,12 +1,26 @@
 .catalog-card {
-  margin: 0;
+  margin: 0 30px 36px 0;
   padding: 0;
 
   &:nth-child(3n) {
-    margin: 0;
+    margin: 0 0 36px 0;
   }
 
-  @media (max-width: 480px) {
+  @media (max-width: $max-mobile) {
+    margin-bottom: 25px;
+  }
+
+  @media (max-width: 697px) {
+    &:nth-child(3n) {
+      margin: 0 30px 25px 0;
+    }
+
+    &:nth-child(2n) {
+      margin: 0;
+    }
+  }
+
+  @media (max-width: 460px) {
     max-width: 130px;
   }
 }
@@ -19,7 +33,6 @@
 }
 
 .catalog-card img {
-  transition: 0.5s;
   margin: 0 0 16px;
   padding: 0;
 
