--- a/source/sass/blocks/catalog-goods.scss
+++ b/source/sass/blocks/catalog-goods.scss
@@ -11,17 +11,11 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: flex-start;
-  column-gap: 30px;
-  row-gap: 36px;
   max-width: 870px;
   margin: 0;
   padding: 0;
 
   @media (min-width: $max-tablet) and (max-width: 1260px) {
     max-width: 660px;
-  }
-
-  @media (max-width: $max-mobile) {
-    row-gap: 25px;
   }
 }
