--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,6 +1,6 @@
 .catalog {
   margin: 0 0 74px;
-  padding: 0 45px;
+  padding: 0 30px;
 
   @media (max-width: $max-mobile) {
     row-gap: 25px;
